--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 sudo: required
-
+dist: trusty
 language: cpp
 
 compiler:
@@ -8,14 +8,17 @@ compiler:
 services:
   - docker
 
+addons:
+  apt:
+    packages:
+    - xvfb
+
 os:
   - linux
 #  - osx
 
 before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
+  - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start; sleep 3 # give xvfb some time to start
 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then docker pull ubuntu:16.04 ; fi
