Generate description-pak
The file description-pak is needed for building deb packages but cannot
be passed as argument to checkinstall. Generate it instead of adding it
in the project.

--- a/.gitignore
+++ b/.gitignore
@@ -45,5 +45,16 @@
 # Logs
 *.log
 
+# Tarball
+*.tgz
+*.tar.gz
+*.zip
+*.deb
+
+# SimTaDyn build dir
+build/*
+tests/build/*
+
 # Debian packages
 doc-pak
+description-pak
