Manage data path
No longer use Config::data_path but Path class:

-- Makefile: Move data path in the Makefile.helper (unit tests Makefile
needs it also). Add missing \" symbol.
-- Config inherits from Path class and default data path is set with the
value given by the Makefile.
-- LoaderManager: no longer inherits from Path class but uses Config.
-- Path: rename replace() by init(). Add expand() which is a lighter
version of find().
-- *: update the code to take into account Path

--- a/.makefile/Makefile.helper
+++ b/.makefile/Makefile.helper
@@ -20,3 +20,10 @@ print-to = \
 ###################################################
 #
 DATE=`date +%Y-%m-%d`
+
+###################################################
+# Where to install project datum
+# ifeq ($(PROJECT_DATA_ROOT),)
+PROJECT_DATA_ROOT = /usr/share/SimTaDyn
+# endif
+PROJECT_DATA_PATH = $(PROJECT_DATA_ROOT)/data
