Travis with ubuntu 17.04 and clang

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -84,7 +84,7 @@ OBJECTS = version.h backward.o ILogger.o Logger.o ILoader.o PendingData.o File.o
 
 ###################################################
 # Compil options
-CXX = g++
+# CXX = g++
 DEFINES = -DBACKWARD_HAS_DW=1 -DSIMTADYN_DATA_PATH=\"$(PROJECT_DATA_PATH)\"
 
 ###################################################
@@ -121,6 +121,7 @@ $(TARGET): version.h $(OBJECTS)
 %.o: %.cpp Makefile
 %.o: %.cpp $(BUILD)/%.d Makefile
 	@$(call print-from,"Compiling C++","$(TARGET)","$<")
+	@$(CXX) --version
 	@$(CXX) $(DEPFLAGS) $(CXXFLAGS) $(DEFINES) $(INCLUDES) -c $(abspath $<) -o $(abspath $(BUILD)/$@)
 	@$(POSTCOMPILE)
 
