Fixing compilation errors detected
Maths.cpp: remove warning detected by g++-5.4
Makefile: missing files

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -74,7 +74,7 @@ OBJ_MANAGERS   = ResourcesTests.o
 OBJ_GRAPHS     = Graph.o GraphAlgorithm.o
 OBJ_GRAPHS    += BasicArcTests.o BasicNodeTests.o BasicGraphTests.o GraphAlgoTests.o
 OBJ_OPENGL     = Color.o Camera2D.o OpenGL.o GLObject.o GLShader.o GLVertexArray.o
-OBJ_OPENGL    += GLVertexBuffer.o GLAttrib.o GLTextures.o Renderer.o
+OBJ_OPENGL    += GLVertexBuffer.o GLAttrib.o GLTextures.o GLWindow.o Renderer.o
 OBJ_OPENGL    += ColorTests.o GLBufferTests.o OpenGLTests.o
 # OBJ_RTREE      = RTreeNode.o RTreeIndex.o RTreeSplit.o
 OBJ_FORTH      = ForthExceptions.o ForthStream.o ForthDictionary.o ForthPrimitives.o Forth.o
